# api

./: .env  .env.example  .gitignore  Dockerfile  Makefile  README.md  adj fl  alembic.ini  bizlenz_api_documentation.xlsx  df  pyproject.toml  pytest.ini  python  requirements.txt  reset_db.py  swagger_to_excel.py  template.yaml  test_calculator.py
.aws-sam/: build.toml
.github/workflows/: ci.yml  ruff.yml
Lambda/: analysishandler
alembic/: MIGRATION_GUIDE.md  env.py  script.py.mako
alembic/versions/: 20250814_feat_add_initial_schema.py  20250814_perf_add_indexes_for_api_optimization.py  20250816_refactor_analysis_tables_structure.py  20250820_remove_display_name_and_last_login_at_.py  20250821_remove_updated_at_from_users_table.py  20250829_feat_add_latest_job_id_foreign_key_to_.py  20250829_feat_create_core_tables_without_.py  20250829_fix_strengthen_constraints_and_.py  20250907_refactor_update_users_table_id_varchar_.py  3c0476a0f1e9_feat_add_market_analysis_tables_market_.py  43af05e94fe9_refactor_update_tables_structure.py  43af05e94fe9_update_tables_structure.py  6fcd4ff964c7_perf_add_s3_indexes_to_analyses.py  950a2b4ea482_perf_add_performance_indexes_to_analyses.py  95981c1d29cf_feat_add_evaluation_table.py  ba206fae5a6b_feat_add_s3_integration_fields_to_.py  da7cc34b7b64_init_tables.py  ebd1084c8d48_feat_add_gemini_integration_fields.py
scripts/: reset_db.py
src/: .env
src/app/: database.py  health.py  main.py
src/app/clients/: cognito_wrapper.py
src/app/core/: config.py  database.py  exceptions.py  security.py
src/app/crud/: evaluation.py  file_matadata.py  file_metadata.py  user.py
src/app/middleware/: cognito_auth.py
src/app/models/: __init__.py  item.py  models.py  user.py
src/app/prompts/: .gitignore  yeobi_startup.py
(+25 files in other folders)
