[project]
name = "api"
version = "0.1.0"
description = "BackEnd project"
requires-python = ">=3.11"

dependencies = [
    "pytest>=7.0.0",
    "fastapi",
    "boto3",
    "python-dotenv",
    "pydantic",
    "uvicorn",
    "httpx",
    "botocore"
]

[tool.uv]

[tool.pytest.ini_options]
addopts = "-v"